--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ $terminal = alacritty
 $fileManager = lf
 $menu = rofi -show drun
 $browser = firefox -P
-$area_screenshot = grim -g "$(slurp)" ~/pictures/screenshots/$(date +'%Y-%m-%d-%H%M%S_selection.png')
+$area_screenshot = grim -g "$(slurp)" ~/screenshots/$(date +'%Y-%m-%d-%H%M%S_selection.png')
 #################
 ### AUTOSTART ###
 #################
